# tractor_trailer_motion_planning_16782

./: CMakeLists.txt  README.md  collision_check.py  todo  vis_traj.py
include/: cc.hpp  collision_check.hpp  planner.h  planner.hpp  utils.hpp
input/: mapinfo.txt
maps/: map1.txt
matlab/: Copy_of_test_gains.m  get_A.m  get_B.m  pure_pursuit.m  pure_pursuit_func.m  rk4.asv  rk4.m  test_gains.asv  test_gains.m  test_sym.asv  test_sym.m  tractor_trailor_model.m  untitled.asv  untitled.m  untitled3.asv  untitled3.m
output/: PlannedTrajectory.txt  TestReversingTrajectory.txt
src/: CMakeCache.txt  Makefile  OG.txt  a.out  cmake_install.cmake  collision_check.hpp  collision_check.py  collision_check_new.py  collision_check_test  controller.cpp  controller_new_convention.cpp  forward_simulator.cpp  forward_simulator.out  getOG.py  main.cpp  map1.txt  map1_cpp.txt  mapinfo.txt  planner  planner.cpp  utils.hpp  vertices.txt  visualise_trajectory_collision.py  visualizer.py
